mobile responsive and alignment fixes

--- a/css/custom.css
+++ b/css/custom.css
@@ -1619,7 +1619,7 @@ div#footer h3 {
 
 @media (min-width: 1367px) {
   .container {
-    max-width: 100%;
+    max-width: 95%;
     width: 100%;
     padding: 0 80px;
   }
